--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 ### Site Settings ###
-title               : portfolYOU
+title               : Steve.Jocum
 description         : >-                               # >- means to ignore newlines until "url:"
-                      I turn coffee into code,
-                      use tabs over spaces
-                      and never broke production.
+                      Product Manager, User Researcher
+                      passionate about solving problems
+                      that create real outcomes.
 
 url                 : ""                               # base hostname & protocol for your site (e.g. http://example.com)
-baseurl             : "/portfolYOU"                    # subpath of your site (e.g. /blog) [IMPORTANT: use "" if your are hosting at https://username.github.io directly]
-repository          : YoussefRaafatNasry/portfolYOU    # repository metadata on GitHub Pages [know more at https://help.github.com/en/articles/repository-metadata-on-github-pages]
+baseurl             : ""                    # subpath of your site (e.g. /blog) [IMPORTANT: use "" if your are hosting at https://username.github.io directly]
+repository          : stevejocum/portfolYOU    # repository metadata on GitHub Pages [know more at https://help.github.com/en/articles/repository-metadata-on-github-pages]
 #remote_theme       : YoussefRaafatNasry/portfolYOU    # uncomment this if you are using it as a remote theme
 
 ### Author Info ###
 author:
-  name              : John Doe
+  name              : Steve Jocum
   image             : https://bit.ly/2KCvgVJ
-  behance           : your_username
+#  behance           : your_username
 # dribbble          : your_username
-  email             : username@domain.com
-  facebook          : your_username
-  github            : your_username
+  email             : stevejocum@gmail.com
+#  facebook          : your_username
+#  github            : your_username
 # gitlab            : your_username
 # instagram         : your_username
   linkedin          : your_username
