--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ repository          : stevejocum/portfolYOU    # repository metadata on GitHub P
 ### Author Info ###
 author:
   name              : Steve Jocum
-  image             : https://bit.ly/2KCvgVJ
+  image             : http://bit.ly/2PVXi0e
 #  behance           : your_username
 # dribbble          : your_username
   email             : stevejocum@gmail.com
