--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ repository          : stevejocum/portfolYOU    # repository metadata on GitHub P
 ### Author Info ###
 author:
   name              : Steve Jocum
-  image             : https://i.imgur.com/lNE3uuI.jpg?1
+  image             : https://i.imgur.com/lNE3uuIl.jpg?1
 #  behance           : your_username
 # dribbble          : your_username
   email             : stevejocum@gmail.com
