--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -1,11 +1,15 @@
 - name: HTML5/CSS3
-  percentage: 90
+  percentage: 60
   color: danger
 
-- name: Go
-  percentage: 80
+- name: Analytics
+  percentage: 70
   color:
 
-- name: Python
-  percentage: 70
+- name: SQL
+  percentage: 50
+  color: dark
+
+- name: Excel
+  percentage: 60
   color: dark
