custom domain live

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -20,7 +20,7 @@
   to: 2018
   description: Started the first student society dedicated to connecting students to opportunities
                in startups after noticing the lack of resources for this borgeoning sector. Helped grow
-               our community from 0 to 1,000 members, put on events attended by 150+ people per event twitch
+               our community from 0 to 1,000 members, put on events attended by 150+ people per event headlined by
                CEOs from Australia's fastest growing startups and helped dozens of students secure jobs in startups.
 
 - title: Student, University of North Carolina, Chapel Hill
@@ -34,7 +34,7 @@
 - title: Student, University of New South Wales
   from: 2014
   to: 2018
-  description: Studies a Bachelors of Commerce at the University of New South Wales. My disciplines
+  description: Studied a Bachelors of Commerce at the University of New South Wales. My disciplines
                were Finance, Information Technology and Management. Dabbled in a few computer science
                classes, started a society and formed strong connections with some incredible people.
                Graduated with a Distinction average for all my classes.
