--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 ### Site Settings ###
 title               : Steve Jocum
 description         : >-                               # >- means to ignore newlines until "url:"
-                      Product Manager, User Researcher
-                      passionate about understanding users
-                      and championing their voice.
+                      Product Manager passionate about deeply understanding
+                      users and rallying a cross functional team to deliver
+                      them beautiful products that solve real problems
 
-url                 : ""                               # base hostname & protocol for your site (e.g. http://example.com)
-baseurl             : ""                    # subpath of your site (e.g. /blog) [IMPORTANT: use "" if your are hosting at https://username.github.io directly]
+url                 : "https://stevejocum.com"                               # base hostname & protocol for your site (e.g. http://example.com)
+# baseurl             : ""                    # subpath of your site (e.g. /blog) [IMPORTANT: use "" if your are hosting at https://username.github.io directly]
 repository          : stevejocum/portfolYOU    # repository metadata on GitHub Pages [know more at https://help.github.com/en/articles/repository-metadata-on-github-pages]
 #remote_theme       : YoussefRaafatNasry/portfolYOU    # uncomment this if you are using it as a remote theme
 
 ### Author Info ###
 author:
   name              : Steve Jocum
-  image             : https://i.imgur.com/lNE3uuIl.jpg?1
+  image             : https://i.ibb.co/s1zfBBx/IMG-0874.jpg #https://i.imgur.com/lNE3uuIl.jpg?1
 #  behance           : your_username
 # dribbble          : your_username
   email             : stevejocum@gmail.com
@@ -21,14 +21,14 @@ author:
 #  github            : your_username
 # gitlab            : your_username
 # instagram         : your_username
-  linkedin          : your_username
-  medium            : your_username
+  linkedin          : steve-jocum-79802bb0
+#  medium            : your_username
 # soundcloud        : your_username
 # spotify           : your_username
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
 # twitch            : your_username
-  twitter           : your_username
+  twitter           : stevejocum
 # vimeo             : your_username
 # youtube           : your_channel_name
 
